# learnings

./: .gitignore  README.md
scontracts/sc01_ink/sc1_flipper/: Cargo.toml  lib.rs  xxx.rs
scontracts/sc02_sol/: hardhat.config.ts  package-lock.json  package.json
scontracts/sc02_sol/contracts/: Lock.sol  Rocket.sol
scontracts/sc03_sol/: package-lock.json  package.json
scontracts/sc03_sol/contracts/: Ballot.sol
scontracts/sc04_sp1/fibonacci/elf/: riscv32im-succinct-zkvm-elf
scontracts/sc05_sp1/elf/: riscv32im-succinct-zkvm-elf
scontracts/sc05_sp1/lib/: Cargo.toml
scontracts/sc05_sp1/lib/src/: lib.rs
scontracts/sc05_sp1/program/: Cargo.toml
scontracts/sc05_sp1/program/src/: main.rs
scontracts/sc05_sp1/script/: Cargo.toml
scontracts/sc06_sp1/: Cargo.toml
scontracts/sc06_sp1/elf/: riscv32im-succinct-zkvm-elf
scontracts/sc06_sp1/lib/: Cargo.toml
scontracts/sc06_sp1/lib/src/: lib.rs
scontracts/sc06_sp1/program/: Cargo.toml
scontracts/sc06_sp1/program/src/: main.rs
scontracts/sc06_sp1/script/: Cargo.toml
scontracts/sp03_sol/: package-lock.json  package.json
scontracts/sp03_sol/contracts/: Ballot.sol
